<CustomModalLayout/> - fix the cutting overflow content bug (#5932)

--- a/src/CustomModalLayout/CustomModalLayout.st.css
+++ b/src/CustomModalLayout/CustomModalLayout.st.css
@@ -28,7 +28,7 @@
 
 /* Extending of BaseModalLayout Blocks */
 .root:not(:removeContentPadding)::content::innerContent {
-  padding: 0 value(spacing30);
+  padding: 3px value(spacing30);
 }
 
 .root:controlButtonAmount(0)::header::innerContent {
